--- a/Profile Card/index.css
+++ b/Profile Card/index.css
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #7fffd4;
+    background-color: #4ddbac;
  }
     
  .image{
@@ -33,11 +33,11 @@
  }
 
  .profile-card{
-    box-shadow: 10px 5px 25px black;
+    box-shadow: 0px 0px 50px black;
     padding: 50px; 
     height: 800px;
     width: 550px;
-    background-color:#fff;
+    background-color:#c3c7c9;
     border-radius: 30px;
     align-items: center;
     display: flex;
@@ -53,6 +53,7 @@
 .pesha{
     font-size: 12px;
     font-weight: 200;
+    text-decoration: underline;
 }
 
 .click{
@@ -64,13 +65,13 @@ justify-content: center;
 .follow  ,.message{
     display:inline-flex;
     /* flex-direction; */
-    background-color: black;
+    background-color: rgb(73, 114, 120);
     height: 50px;
     width: 150px;
     border-radius: 40px;
     align-items: center;
     justify-content: center;
-    color: #fff;
+    color: #000000;
     margin: 20px;
     text-decoration: none;
     
@@ -86,18 +87,49 @@ justify-content: center;
     }
 
     .message:hover{
-    background-color:#3333FF;
+    background-color:#1b1bfa;
     color:white;
     transition: 0.7s;
     }
 
     .follow:hover{
-        background-color:#3333FF;
+        background-color:#1b1bfa;
         color:white;
         transition: 0.6s;
         }
 
-        a{
+        .b{
             text-decoration: none;
             color: aliceblue;
-        }  
+        }
+
+        .icons{
+            display: flex;
+            height: 500px;
+            width: 500px;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .link{
+            display: flex;
+            color: white;
+            background-color:whitesmoke;
+            height: 50px;
+            width: 50px;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .link,.icons {
+           text-decoration: none;
+           margin: 8px;
+           padding: 8px;
+           border-radius: 50%; 
+         }
+
+         .link:hover{
+            background-color:#a4bdc5;
+            transition: 0.7s;
+            box-shadow:  0px 0px 27px  black;
+         }
