--- a/Profile Card/index.css
+++ b/Profile Card/index.css
@@ -4,13 +4,14 @@
  *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing:border-box;
     font-family:"Poppins", sans-serif;
+    object-fit: cover;
  }
  
- body{
-    height: 100vh;
-    display: flex;
+ .wrapper{
+    display:grid;
+    grid-template-columns: 360px;
     align-items: center;
     justify-content: center;
     background-color: #4ddbac;
@@ -18,8 +19,8 @@
     
  .image{
     position: relative;
-    height: 350px;
-    width: 350px;
+    height: 300px;
+    width: 300px;
     border-radius:50%; background-color:black;
     padding: 3px;
  }
@@ -34,15 +35,13 @@
 
  .profile-card{
     box-shadow: 0px 0px 50px black;
-    padding: 50px; 
-    height: 800px;
-    width: 550px;
+    height:100vh;
+    width: 520px;
     background-color:#c3c7c9;
     border-radius: 30px;
     align-items: center;
     display: flex;
-    flex-direction: column;
-    
+    flex-direction: column;   
  }
 .name{
     padding: 20px;
