--- a/Profile Card/index.css
+++ b/Profile Card/index.css
@@ -35,7 +35,7 @@
 
  .profile-card{
     box-shadow: 0px 0px 50px black;
-    height:100vh;
+    height: 750px;;
     width: 520px;
     background-color:#c3c7c9;
     border-radius: 30px;
